# momobot

./: .gitignore  .gitmodules  .readthedocs.yml  CNAME  README.md  index.html  mkdocs.yml
.github/workflows/: sphinx.yml
assets/: Untitled Diagram.drawio
css/: main.css  momobot.css
docs/: BONUS - Circuit Diagram Draw.io Links  BONUS - Flipsky VESC 4.12 Documentation.md  MOMObot Full Documentation.md  README.md  _sidebar.md  conf.py  electronics.md  hardware.md  index.html  index.md  index.rst  overview.md  software.md  vesc_doc.md
docs/bonus/: cd_links.md  cd_links.rst  vesc_doc.md  vesc_doc.rst
docs/com/: electronics.rst  hardware.rst  software.rst
docs/credits/: contributions.rst  license.rst
momobot/: CMakeLists.txt
momobot/include/: momo_base.h
momobot/launch/: navigate.launch
momobot/launch/include/: amcl.launch  laser.launch
momobot/launch/include/move_base/: move_base_2wd.launch
momobot/param/navigation/: local_costmap_params.yaml  move_base_params.yaml
momobot/src/: momo_base.cpp  momo_base.h
momobot/teensy/firmware/lib/config/: momo_base_config.h
momobot/teensy/firmware/src/: firmware.ino
momobot_ws/setup_scripts/Linux/: convenience_tools_install  robot_playground_install  ros_lino_base_install
momobot_ws/src/momo_emotions/: CMakeLists.txt  package.xml  setup.py
momobot_ws/src/momo_emotions/src/: PIDController.py  cmd_vel_face_tracking.py
momobot_ws/src/momobot/: package.xml
momobot_ws/src/momobot/filters/: laser_shadow_filter.yaml
momobot_ws/src/momobot/include/: momo_base.h
momobot_ws/src/momobot/launch/: bringup.launch
momobot_ws/src/momobot/launch/include/imu/: imu.launch
momobot_ws/src/momobot/launch/include/lidar/: lms111.launch
momobot_ws/src/momobot/maps/: SUTD_LEVEL_1_LABELLED.yaml  admissions.yaml  campus_centre.pgm  fourth_floor.yaml  sutd_1_4.yaml
momobot_ws/src/momobot/param/navigation/: base_local_planner_default_params.yaml  costmap_common_params.yaml
momobot_ws/src/momobot/src/: momo_base.cpp
momobot_ws/src/semantic_pose/: CMakeLists.txt  README.md
momobot_ws/src/semantic_pose/config/: config.yaml
momobot_ws/src/semantic_pose/include/: places.h  xmlrpc_helpers.h
momobot_ws/src/semantic_pose/src/: places.cpp  semantic_pose_node.cpp
momobot_ws/src/semantic_pose/src/launch/: semantic_pose.launch
momobot_ws/src/semantic_pose_sounder/: CMakeLists.txt  package.xml  setup.py
momobot_ws/src/semantic_pose_sounder/config/: config.yaml
momobot_ws/src/semantic_pose_sounder/launch/: semantic_pose_sounder.launch
momobot_ws/src/semantic_pose_sounder/src/: semantic_pose_sounder
momobot_ws/src/soar-momo/: LICENSE  README.md
momobot_ws/src/soar-momo/momobot/launch/: navigate.launch  slam.launch
momobot_ws/src/soar-momo/momobot/maps/: SUTD_LEVEL_1_OPEN_HOUSE.yaml  admissions_open.pgm  campus_centre.yaml
momobot_ws/src/soar-momo/momobot/rviz/: odometry.rviz
setup_scripts/Linux/: README.md
src/: CMakeLists.txt
src/LMS1xx/: CMakeLists.txt
src/LMS1xx/launch/: lidar_bringup.launch  lidar_bringup.launch~
src/LMS1xx/src/: LMS1xx_node.cpp
src/launch/include/move_base/: move_base_2wd.launch
src/momo_porcupine/: CMakeLists.txt  package.xml  setup.py
src/momo_porcupine/src/: porcupine_talker.py
src/param/navigation/: base_local_planner_default_params.yaml
src/rviz/: navigate.rviz
src/semantic_pose/: package.xml
src/soar-momo/momobot/launch/: minimal.launch
src/soar-momo/momobot/launch/include/: amcl.launch
src/soar-momo/momobot/maps/: SUTD_LEVEL_1.yaml  SUTD_LEVEL_1_OPEN_HOUSE_CENTER_ONLY.yaml  admissions.pgm  fourth_floor.pgm
src/soar-momo/momobot/rviz/: navigate.rviz
src/soar-momo/momobot/teensy/firmware/lib/motor/: Motor.cpp
src/soar-momo/momobot/teensy_bakbak/firmware/lib/config/: momo_base_config.h
src/soar-momo/momobot/teensy_bakbak/firmware/lib/encoder/: Encoder.h
src/src/: momo_base_node.cpp
(+6 files in other folders)
