<?xml version="1.0"?>
<package>
  <name>semantic_pose</name>
  <version>0.0.0</version>
  <description>The semantic_pose package</description>

  <maintainer email="jimenojmm@gmail.com">juan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
